# omnicross

./: .gitignore  README.md  package-lock.json  package.json  target_language.md  tsconfig.base.json  vitest.config.ts
.github/workflows/: release.yml
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/scripts/: build-daemon-runtime.mjs  stage-node.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: daemon-http.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: daemon_runtime.rs  kill.rs  lib.rs  main.rs  ui_settings.rs
docs/: README.ar.md  README.bg.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es-419.md  README.es-ES.md  README.fi.md  README.fr.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.ms.md  README.nb.md  README.nl.md  README.pl.md  README.pt-BR.md  README.pt-PT.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-Hant.md  README.zh.md
docs/design/: model-kind-mapping-and-passthrough.md
scripts/: dev.mjs
